--- a/package.json
+++ b/package.json
@@ -4,13 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.3.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/validator": "^13.7.2",
     "apollo-server": "^3.8.1",
+    "bcryptjs": "^2.4.3",
+    "dataloader": "^2.1.0",
     "graphql": "^16.5.0",
-    "uuid": "^8.3.2"
+    "jsonwebtoken": "^8.5.1",
+    "ts-node": "^10.8.0",
+    "uuid": "^8.3.2",
+    "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "prisma": "^3.3.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.7.2"
   }
 }
